--- a/application/admin/view/box_cate/add_cate.html
+++ b/application/admin/view/box_cate/add_cate.html
@@ -7,21 +7,33 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>设置中奖名单</h5>
+                    <h5>添加类别</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" action="{:url('edit')}" enctype="multipart/form-data">
-                        <input type="hidden" name="order_id" value="{$order_id}">
-                        <dd>
-                            {volist name="list" id="vo"}
-                            <div><label><input type="checkbox" value="{$vo.}" {if condition="$vo.status eq 1"}checked{/if} name="ids[]">{$vo.nickname}</label></div>
-                            {/volist}
-                        </dd>
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_cate/cate_post_2')}" enctype="multipart/form-data">
+                        <input type="hidden" name="id" value="{$info.id}">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">名称</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="name" value="{$info.name}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">图片</label>
+                            <div class="img-preview" style="display:{$info.picture? 'block':'none'};margin-left:-20%">
+                                <img src="{$info.picture|default=''}" id='img_show' style="min-width: 0px !important; min-height: 0px !important; max-width: none !important; max-height: none !important; width: 300px; height: 200px">
+                            </div>
+                            <div class="form-group" style="margin-left:18%;">
+                                <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
+                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file" id="pictur_btn" class="hide" />
+                                </label>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit">
                                 <button class="btn btn-white" onclick="javascript:history.back(-1);return false;">取消</button>
-                            </div>
+                            </div> 
                         </div>
                     </form>
                 </div>
