--- a/application/admin/view/box_cate/add_envelope.html
+++ b/application/admin/view/box_cate/add_envelope.html
@@ -11,10 +11,11 @@
                 </div>
                 <div class="ibox-content">
                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_cate/envelope_post')}" enctype="multipart/form-data">
+                        <input type="hidden" name="id" value="{$info.id}">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">名称</label>
                             <div class="col-sm-9">
-                                <input type="text" name="name" value="" class="form-control">
+                                <input type="text" name="name" value="{$info.name}" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
