--- a/application/admin/view/order/join_list.html
+++ b/application/admin/view/order/join_list.html
@@ -63,10 +63,10 @@
                                     </td>
                                     <td>
                                         {if condition="$vo.status eq 0"}
-                                        <a class="btn btn-default" href="JavaScript:;" onclick="setgift({$vo.id,1})"><i class="fa fa-list"></i> 设置为中奖</a>
+                                        <a class="btn btn-default" href="JavaScript:;" onclick="setgift({$vo.id},1)"><i class="fa fa-list"></i> 设置为<span style="color:red;">中奖</span></a>
                                         {/if}
                                         {if condition="$vo.status eq 1 and $vo.join_status eq 0"}
-                                        <a class="btn btn-default" href="JavaScript:;" onclick="setgift({$vo.id,0})"><i class="fa fa-list"></i> 设置为不中奖</a>
+                                        <a class="btn btn-default" href="JavaScript:;" onclick="setgift({$vo.id},2)"><i class="fa fa-list"></i> 设置为<span style="color:blue;">不中奖</span></a>
                                         {/if}
                                     </td>
                                 </tr>
@@ -77,7 +77,22 @@
               
                     </div>
                 </div>
-                
-<script></script>
+
+<script>
+    function setgift(id,status){
+        $.ajax({
+            type : "GET",
+            url:"/admin/order/setgift/id/"+id+'/status/'+status,
+            dataType:'json',
+            success: function(data){
+                if(data.status == 1){
+                    alert(data.msg);
+					location.reload();
+                }else
+                    alert(data.msg);
+            }
+        });			
+    }    
+</script>
 
 {/block}
