--- a/application/admin/view/common/base.html
+++ b/application/admin/view/common/base.html
@@ -242,7 +242,7 @@
 		</script>
 		{block name="script"}{/block}
 		<script>
-			图片点击放大
+			// 图片点击放大
 			$(function() {
 				$(document).on('click', ".post_imglist", function(e) {
 					if($(e.target).prop("tagName") == 'IMG') {
