--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -121,7 +121,7 @@
                                                  <td>
                                                     <input type="file" name="img_td[img][]" value="" onchange="upload_file(this)"/>
                                                 </td>
-                                                <td><img src="" width="50" alt=""></td>
+                                                <td><img src="" width="50" alt="" class="post_imglist"></td>
                                                  <td><input type="text" class="pri_id" value="" name="pri_td[pri][]"></td>
                                                  <td><input class="input-text" type="text" name="goods_td[num][]"></td>
                                                  <td onclick="delTr(this)"><i class="Hui-iconfont del_td"></i></td>
