--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -138,7 +138,7 @@
                                                         <input type="file" name="img_td[img][]" value="{$vo}" onchange="upload_file(this)"/>
                                                     </td>
                                                     <td>
-                                                        <img src="{$vo}" alt="" width="50"  class="post_imglist">
+                                                        <img src="{$vo}" alt="" width="50">
                                                     </td>
                                                      {/if}
                                                      {if condition="($key === 'com_price')"}
