--- a/application/admin/view/box_cate/add_cate.html
+++ b/application/admin/view/box_cate/add_cate.html
@@ -21,7 +21,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">图片</label>
                             <div class="img-preview" style="display:{$info.picture? 'block':'none'};margin-left:-20%">
-                                <img src="{$info.picture|default=''}" id='img_show' style="min-width: 0px !important; min-height: 0px !important; max-width: none !important; max-height: none !important; width: 300px; height: 200px">
+                                <img src="{$info.picture|default=''}" id='img_show' style=" max-width: 300px; max-height: 300px">
                             </div>
                             <div class="form-group" style="margin-left:18%;">
                                 <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
