--- a/application/admin/view/box_video/index.html
+++ b/application/admin/view/box_video/index.html
@@ -17,7 +17,7 @@
                             <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>视频名称</th>
+                                <th>相框名称</th>
                                 <th>状态</th>
                                 <th>添加时间 </th>
                                 <th>操作</th>
