--- a/application/admin/view/box_video/add.html
+++ b/application/admin/view/box_video/add.html
@@ -8,24 +8,25 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>添加视频</h5>
+                    <h5>添加相框</h5>
                 </div>
                 <div class="ibox-content">
                     <form method="post" class="form-horizontal" action="{:url('box_video/add')}" enctype="multipart/form-data">
                         <input type="hidden" name="video_url" >
                         <div class="form-group">
-                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>视频名称</label>
+                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>相框名称</label>
                             <div class="col-sm-9">
                                 <input type="text" name="name" value="" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">视频上传</label>
+                            <label class="col-sm-2 control-label">相框上传</label>
                             <div class="col-sm-9">
                                 <dd class="upload_area clearfix" style="margin: 0 auto;">
                                     <ul id="imglist" class="post_imglist">
                                         <li>
-                                            <video src="" controls="controls" id="file0" style=" width: 300px !important;height: 300px !important;"></video>
+                                            <!-- <video src="" controls="controls" id="file0" style=" width: 300px !important;height: 300px !important;"></video> -->
+                                            <img src="" alt=""  id="file0" style=" max-width: 300px !important;max-height: 300px !important;">
                                         </li>
                                     </ul>
                                     <label for="file_apload"><div class="upload_btn"></div></label>
@@ -52,7 +53,7 @@
                         </div>
                     </form>
                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box/upload_photo')}" enctype="multipart/form-data">
-                        <input type="file" id="file_apload" value=""  name="photo_file" onchange="video_upload()" style="display: none">
+                        <input type="file" id="file_apload" value="" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*"  name="photo_file" onchange="video_upload()" style="display: none">
                     </form>
                 </div>
             </div>
