--- a/application/admin/view/box_video/edit.html
+++ b/application/admin/view/box_video/edit.html
@@ -87,7 +87,7 @@
                                     <ul id="imglist" class="post_imglist">
                                         <li>
                                             <!-- <video src="{$info.video_url}" controls="controls" id="file0" style=" width: 300px !important;height: 300px !important;"></video> -->
-                                            <img src="" alt=""   id="file0" style=" max-width: 300px !important;max-height: 300px !important;">
+                                            <img src="{$info.video_url}" alt=""   id="file0" style=" max-width: 300px !important;max-height: 300px !important;">
                                         </li>
                                     </ul>
                                     <label for="file_apload"><div class="upload_btn"></div></label>
