--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -14,6 +14,7 @@
 body,html{
     width: 100%;
     height: 100%;
+    overflow:hidden;
 }
 .box{
     opacity: 0;
@@ -23,6 +24,8 @@ body,html{
     overflow: hidden;
     transform: scale(2);
     animation:box 7s;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 @keyframes box
 {
@@ -771,3 +774,4 @@ body,html{
     </div>
 </body>
 </html>
+script
