--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -14,7 +14,7 @@
 body,html{
     width: 100%;
     height: 100%;
-    overflow:hidden;
+    overflow: hidden;
 }
 .box{
     opacity: 0;
@@ -179,7 +179,7 @@ body,html{
     top: 0;
     left: 0;
     overflow: hidden;
-    transform: scale(2);
+    /* transform: scale(2); */
     animation:box2 12.5s;
     /* 等待7秒后开始执行动画 */
     animation-delay:7s;
@@ -401,7 +401,7 @@ body,html{
 }
 
 /* 背景3 */
-.box3beijing{
+.box3beijingbox{
     top: 0;
     left: 0;
     z-index: 1;
