--- a/application/admin/view/box_music/edit.html
+++ b/application/admin/view/box_music/edit.html
@@ -94,7 +94,7 @@
                                             <li><a href="{$info.music_url}" class="music_css"><img class="wh60" id="file0" src="__STATIC__/images/music.jpg"></a></li>
                                         </ul>
                                         <div class="upload_btn">
-                                            <input type="file" id="upload_music" value="" accept=".wav,.mp3,.ogg,.acc,.webm" name="music" onchange="music_upload()">
+                                            <label for="file_apload"><div class="upload_btn"></div></label>
                                         </div>
                                     </dd>
                             </div>
